# schema-conversion-orchestrator

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  build.sh  build_and_run.sh  build_subpackages.sh  docker-compose.yml  generate_diagrams.sh  pyproject.toml  run.sh
eval/: ANNOTATION_INSTRUCTIONS.md  README.md  annotate_outputs.py  annotation_model.py  benchmark_results.csv  benchmark_results_JsonSchema_to_SHACL_TTL.csv  benchmark_results_SHACL_TTL_to_JsonSchema.csv  benchmark_runner.py  cache_timing_analysis.py  cache_timing_results.csv  cache_timing_results.json  compare_json_schemas.py  compare_shacl.py  crop_to_content.py  evaluate.py  feature_scores.json  path_count_stats.json  path_count_stats.py  plot_orchestrator_evaluation.py  plotting_conversion_graph.py  plotting_conversion_matrix.py
flask-backend/: ConvertersLinkMl.py  ConvertersMdModels.py  ConvertersXsd.py  Dockerfile  app.py  build_conversion_matrix.py  data_structures.py  logic.py  register_python_converters.py  requirements.txt  visualize_conversion_graph.py
java-converter/: Dockerfile  pom.xml
k8s/: namespace.yaml  node-converter-deployment.yaml  node-converter-service.yaml  orchestrator-deployment.yaml  orchestrator-service.yaml  zookeper-deployment.yaml
node-converter/: Dockerfile  package.json
requirements/: runtime.txt
schema-conversion-orchestrator/: .dockerignore  ConvertersLinkMl.py  ConvertersMdModels.py  ConvertersRdfLib.py  ConvertersXsd.py  Dockerfile  app.py  attempt_conversions.py  build_conversion_matrix.py  build_converters.sh  converter.py  (+21 more)
(+131 files in other folders)
